--- a/restaurant.html
+++ b/restaurant.html
@@ -30,24 +30,24 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent" class="restaurant-main">
+  <main id="maincontent" class="maincontent restaurant-main">
     <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container" class="map-container">
+      <div id="map" class="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
-      <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
+    <section id="restaurant-container" class="restaurant-container">
+      <h1 id="restaurant-name" class="restaurant-name"></h1>
+      <img id="restaurant-img" class="restaurant-img">
+      <p id="restaurant-cuisine" class="restaurant-cuisine"></p>
+      <p id="restaurant-address" class="restaurant-address"></p>
+      <table id="restaurant-hours" class="restaurant-hours"></table>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
-    <section id="reviews-container">
-      <ul id="reviews-list"></ul>
+    <section id="reviews-container" class="reviews-container">
+      <ul id="reviews-list" class="reviews-list"></ul>
     </section>
     <!-- End reviews -->
   </main>
