feat: WIP Major style overhaul to add responsive behavior
This commit contains the bulk of the changes required to make the whole
  experience of using the app more repsonsive. Headers and footers stay
  where they need to, info boxes expand to fill the space and stay
  nicely centered, fonts are formatted for style and readability.
  There's still a considerable amount of cleanup to do on the CSS, and I
  may update the expanding boxes to fall into multiple columns on the
  main page. After that, I'll be moving on to accessibility and caching
  updates.

css/styles.css:
    Made a dang mess.
    Added new style rules for font updates and size changes and
      formatting.

index.html:
    Made some minor updates to put some page elements in wrappers to
      enforce a grid layout.

restaurant.html:
    Made some minor updates to put some page elements in wrappers to
      enforce a grid layout.

js/restaurant_info.js:
    Updated the function that builds the HTML blocks for the reviews to
      add additional classes to the new elements.
    Updated the same function to dynamically assign classes based on the
      review's rating, which are now color-coded based on whether the
      review was poor (1, red) or very favorable (5, green).

--- a/restaurant.html
+++ b/restaurant.html
@@ -20,7 +20,7 @@
     <nav>
       <h1>Restaurant Reviews</h1>
       <!-- Beginning breadcrumb -->
-      <ul id="breadcrumb" >
+      <ul id="breadcrumb" class="breadcrumb">
         <li><a href="/">Home</a></li>
       </ul>
       <!-- End breadcrumb -->
@@ -39,10 +39,12 @@
     <!-- Beginning restaurant -->
     <section id="restaurant-container" class="restaurant-container">
       <h1 id="restaurant-name" class="restaurant-name"></h1>
-      <img id="restaurant-img" class="restaurant-img">
-      <p id="restaurant-cuisine" class="restaurant-cuisine"></p>
-      <p id="restaurant-address" class="restaurant-address"></p>
-      <table id="restaurant-hours" class="restaurant-hours"></table>
+      <section class="restaurant-info">
+        <img id="restaurant-img" class="restaurant-img">
+        <p id="restaurant-cuisine" class="restaurant-cuisine"></p>
+        <p id="restaurant-address" class="restaurant-address"></p>
+        <table id="restaurant-hours" class="restaurant-hours"></table>
+      </section>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
@@ -54,7 +56,7 @@
   <!-- End main -->
 
   <!-- Beginning footer -->
-  <footer id="footer">
+  <footer id="footer" class="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
