--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
     <section>
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" class="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants();">
-          <option value="all">All Neighborhoods</option>
-        </select>
-        <select id="cuisines-select" class="cuisines-select" name="cuisines" onchange="updateRestaurants();">
-          <option value="all">All Cuisines</option>
-        </select>
+        <section class="filter-wrapper">
+          <select id="neighborhoods-select" class="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants();">
+            <option value="all">All Neighborhoods</option>
+          </select>
+          <select id="cuisines-select" class="cuisines-select" name="cuisines" onchange="updateRestaurants();">
+            <option value="all">All Cuisines</option>
+          </select>
+        </section>
       </div>
       <ul id="restaurants-list" class="restaurants-list"></ul>
     </section>
@@ -42,7 +44,7 @@
 
 
   <!-- yo why does this footer have an ID of 'footer' wth -->
-  <footer id="footer">
+  <footer id="footer" class="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
