--- a/restaurant.html
+++ b/restaurant.html
@@ -30,7 +30,7 @@
 
     <section class="primary-view">
       <section id="restaurant-view" class="info-view">
-        <h1 id="restaurant-name" class="vendor-name"></h1>
+        <h2 id="restaurant-name" class="vendor-name"></h2>
 
         <section class="vendor-view styled-box-view">
           <img id="restaurant-img" class="vendor-img">
@@ -53,12 +53,12 @@
   </main>
 
   <footer id="footer" class="page-footer">Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</footer><!--<div class="bg-filler"></div>-->
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin="" type="text/javascript">
-</script><script type="text/javascript" src="js/util.js">
-</script><script type="text/javascript" src="sw.js">
-</script><script type="text/javascript" src="js/reg.js">
-</script><script type="text/javascript" src="js/dbhelper.js">
-</script><script type="text/javascript" src="js/restaurant_info.js">
-</script><!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script> -->
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin="" type="text/javascript"></script>
+  <script type="text/javascript" src="js/util.js"></script>
+  <script type="text/javascript" src="sw.js"></script>
+  <script type="text/javascript" src="js/reg.js"></script>
+  <script type="text/javascript" src="js/dbhelper.js"></script>
+  <script type="text/javascript" src="js/restaurant_info.js"></script>
+  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script> -->
 </body>
 </html>
